--- a/index.html
+++ b/index.html
@@ -943,12 +943,12 @@
         import { getFirestore, collection, addDoc, query, where, getDocs, updateDoc, doc, orderBy, Timestamp } from 'https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js';
 
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_PROJECT_ID.appspot.com",
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_APP_ID"
+            apiKey: "AIzaSyB9d2FXw4FF-NU2-vj5sxHosjUAaIWXQpM",
+            authDomain: "web-projects-28724.firebaseapp.com",
+            projectId: "web-projects-28724",
+            storageBucket: "web-projects-28724.firebasestorage.app",
+            messagingSenderId: "314790669795",
+            appId: "1:314790669795:web:cc8b43e9c7ed53d70604d6"
         };
 
         // Initialize Firebase
